--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,18 +1,35 @@
 <header class="shadow-sm py-2">
-  <div class="container mx-auto grid grid-cols-2 gap-5 justify-between py-4">
-    <a href="#">logo</a>
-    <nav class="justify-end flex">
+  <div class="container mx-auto flex justify-between gap-5 py-4">
+    <a routerLink="">logo</a>
+    <nav
+    *ngIf="isAuth;  else isNotAuth"
+     class="justify-end flex">
       <ul class="flex gap-5 items-center">
         <li class="text-white/50">
-          <a href="#">Home</a>
+          <a routerLink=""
+          routerLinkActive="text-white"
+          [routerLinkActiveOptions]="{exact: true}">Home</a>
         </li>
         <li class="text-white/50">
-          <a href="#">Profile</a>
+          <a routerLink="profile"
+          routerLinkActive="text-white">Profile</a>
         </li>
         <li class="text-white/50">
-          <a href="#">Home</a>
+          <button class="flex">
+            <fa-icon [icon]="logoutIcon" class="text-white"></fa-icon>
+          </button>
         </li>
       </ul>
     </nav>
+    <ng-template #isNotAuth>
+      <ul class="flex items-center gap-4 ml-auto">
+        <li>
+          <a routerLink="signup">SignUp</a>
+        </li>
+        <li>
+          <a routerLink="login">Login</a>
+        </li>
+      </ul>
+    </ng-template>
   </div>
 </header>
