--- a/src/app/pages/signup/signup.component.html
+++ b/src/app/pages/signup/signup.component.html
@@ -1,17 +1,30 @@
-<form class="flex flex-col w-1/3 mx-auto mt-20 p-4 rounded border border-slate-600 gap-5">
+<form class="flex flex-col w-1/3 mx-auto mt-20 p-4 rounded border border-slate-600 gap-5"
+[formGroup]="userData"
+(ngSubmit)="onSubmit()">
   <h1 class="text-center">Sign Up</h1>
 
   <div class="flex flex-col">
     <label for="email" class="text-slate-400 text-sm">Email</label>
-    <input type="email" placeholder="Email" id="email" class="input" />
+    <input type="email" placeholder="Email" id="email" class="input" formControlName="email" required />
+
+    <div *ngIf="userData.controls['email'].invalid && (userData.controls['email'].dirty || userData.controls['email'].touched)" class="text-red-500 text-xs mt-2">
+    <div *ngIf="userData.controls['email'].hasError('required')">Email is required</div>
+    <div *ngIf="userData.controls['email'].hasError('email')">Enter a valid email address</div>
+    </div>
   </div>
+
   <div class="flex flex-col">
     <label for="password" class="text-slate-400 text-sm">Password</label>
-    <input type="password" placeholder="Password" id="password" class="input" />
+    <input type="password" placeholder="Password" id="password" class="input" formControlName="password" required />
+
+    <div *ngIf="userData.controls['password'].invalid && (userData.controls['password'].dirty || userData.controls['password'].touched)" class="text-red-500 text-xs mt-2">
+      <div *ngIf="userData.controls['password'].hasError('required')">Password is required</div>
+      <div *ngIf="userData.controls['password'].hasError('minlength')">Enter a valid password</div>
+      </div>
   </div>
 
   <div class="flex items-center gap-4 mt-5 justify-end">
-    <button class="btn btn-green">Confirm</button>
+    <button class="btn btn-green" [disabled]="!userData.valid">Confirm</button>
     <button class="btn btn-red">Cancel</button>
   </div>
 </form>
