--- a/src/app/components/categories/categories.component.html
+++ b/src/app/components/categories/categories.component.html
@@ -1,1 +1,24 @@
-<p>categories works!</p>
+<div class="p-4 shadow rounded grid">
+  <div>
+    <div class="flex flex-wrap items-center gap-2 mb-5">
+      <div class="flex py-2 px-8 bg-blue-600 text-xs text-white relative"
+      *ngFor="let category of this.categoryService.categoriesSig()">
+        <p>{{category.title}}</p>
+
+        <button class="absolute left-2">
+          <fa-icon [icon]="faEdit"></fa-icon>
+        </button>
+
+        <button class="absolute right-2" (click)="delete(category.id)" [disabled]="!this.categoryForm.valid">
+          <fa-icon [icon]="faRemove"></fa-icon>
+        </button>
+      </div>
+    </div>
+  </div>
+
+  <form
+  [formGroup]="categoryForm" (ngSubmit)="onSubmit()">
+    <input type="text" placeholder="Category name..." class="input flex w-full" formControlName="title" required/>
+    <button class="btn btn-green mt-2 w-full flex" type="submit">Submit</button>
+  </form>
+</div>
