--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -2,7 +2,7 @@
   <div class="container mx-auto flex justify-between gap-5 py-4">
     <a routerLink="">logo</a>
     <nav
-    *ngIf="isAuth;  else isNotAuth"
+    *ngIf="!this.authService.isAuthSig(); else isNotAuth;"
      class="justify-end flex">
       <ul class="flex gap-5 items-center">
         <li class="text-white/50">
@@ -15,7 +15,7 @@
           routerLinkActive="text-white">Profile</a>
         </li>
         <li class="text-white/50">
-          <button class="flex">
+          <button class="flex" (click)="logoutHandler()">
             <fa-icon [icon]="logoutIcon" class="text-white"></fa-icon>
           </button>
         </li>
